# AI-Agents

./: .env.example  .gitignore  README.md  env.example  pyproject.toml  requirements.txt
config/: config.py
database/: findings.csv
src/: db_schema.py  llm.py  models.py
src/labs/crewai/: crewai_lab.py
src/labs/lab4/: main.py
src/labs/lab4/utils/: build_workflow.py  chief_researcher_node.py  evaluator_node.py  report_writer_node.py  research_node.py  route_after_evaluation.py
src/labs/langGraph/: langGraph_lab.py
src/labs/langGraph/utils/: analyst_synthesizer.py  assign_research_workers.py  build_workflow.py  orchestrator.py  researcher_worker.py
src/tools/: insert.py  report.py  retrieve.py  web_search.py
test/: view_db.py
